force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>DNC</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>ENROLLED WITH COMPETITOR - NOT SETTLED OUT, NOT INTERESTED</fullName>
                <label>Enrolled With Competitor - Not Settled Out, Not Interested</label>
            </value>
            <value>
                <fullName>ENROLLED WITH COMPETITOR - SETTLED OUT,</fullName>
                <label>Enrolled With Competitor - Settled Out</label>
            </value>
            <value>
                <fullName>FUTURE FOLLOW UP</fullName>
                <label>Future Follow Up</label>
            </value>
            <value>
                <fullName>Ghosted</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>No Hardship</fullName>
            </value>
            <value>
                <fullName>Not Interested - Cost</fullName>
            </value>
            <value>
                <fullName>NOT INTERESTED - (HAS DEBT)</fullName>
                <label>Not Interested - Has Debt</label>
            </value>
            <value>
                <fullName>Not Interested - Has settlements</fullName>
            </value>
            <value>
                <fullName>Not Interested - Payment</fullName>
            </value>
            <value>
                <fullName>NOT INTERESTED - (SEEKING FUNDING)</fullName>
                <label>Not Interested - Seeking Funding</label>
            </value>
            <value>
                <fullName>NQ - AFFORDABILITY</fullName>
                <label>NQ - Affordability</label>
            </value>
            <value>
                <fullName>NQ - BALANCE / PAYMENTS</fullName>
                <label>NQ - Balance / Payments</label>
            </value>
            <value>
                <fullName>REDUCED PAYS WITH CREDITOR</fullName>
                <label>Reduced Pays With Creditor</label>
            </value>
            <value>
                <fullName>trust</fullName>
                <label>Trust</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>