force-app/main/default/objects/Opportunity/fields/Lost__c.field-meta.xml
<CustomField>
    <fullName>Lost__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check only if we lost the Deal.</inlineHelpText>
    <label>Opportunity Lost</label>
    <type>Checkbox</type>
</CustomField>