force-app/main/default/objects/Opportunity/fields/Main_Source__c.field-meta.xml
<CustomField>
    <fullName>Main_Source__c</fullName>
    <label>Main Source</label>
    <length>200</length>
    <type>Text</type>
</CustomField>