force-app/main/default/objects/Opportunity/fields/Medical_Debt__c.field-meta.xml
<CustomField>
    <fullName>Medical_Debt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Debt</label>
    <type>Checkbox</type>
</CustomField>