force-app/main/default/objects/Opportunity/fields/Middle_name__c.field-meta.xml
<CustomField>
    <fullName>Middle_name__c</fullName>
    <label>Middle name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>