force-app/main/default/objects/Opportunity/fields/No_Fee_Program__c.field-meta.xml
<CustomField>
    <fullName>No_Fee_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Fee Program</label>
    <type>Checkbox</type>
</CustomField>