force-app/main/default/objects/Opportunity/fields/NSF_Count__c.field-meta.xml
<CustomField>
    <fullName>NSF_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NSF Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>