force-app/main/default/objects/Opportunity/fields/NSF_Last_Logged_Date__c.field-meta.xml
<CustomField>
    <fullName>NSF_Last_Logged_Date__c</fullName>
    <label>NSF Last Logged Date</label>
    <type>Date</type>
</CustomField>