force-app/main/default/objects/Opportunity/fields/NSF_Today_Batch__c.field-meta.xml
<CustomField>
    <fullName>NSF_Today_Batch__c</fullName>
    <label>NSF Today Batch</label>
    <type>Date</type>
</CustomField>