force-app/main/default/objects/Opportunity/fields/Number_Of_Months__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Months__c</fullName>
    <formula>Number_of_Weeks__c/4.345</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>