force-app/main/default/objects/Opportunity/fields/Opp_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner_Phone__c</fullName>
    <formula>RIGHT(
    SUBSTITUTE(
      SUBSTITUTE(
        SUBSTITUTE(
          SUBSTITUTE(
            SUBSTITUTE(
              SUBSTITUTE(
                IF(ISBLANK(Owner.Phone), Owner.MobilePhone, Owner.Phone),
                &quot;(&quot;, &quot;&quot;
              ),
              &quot;)&quot;, &quot;&quot;
            ),
            &quot;-&quot;, &quot;&quot;
          ),
          &quot; &quot;, &quot;&quot;
        ),
        &quot;+&quot;, &quot;&quot;
      ),
      &quot;.&quot;, &quot;&quot;
    ),
    10
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Owner Phone</label>
    <type>Text</type>
</CustomField>