force-app/main/default/objects/Opportunity/fields/Our_Non_Refundable_Fee__c.field-meta.xml
<CustomField>
    <fullName>Our_Non_Refundable_Fee__c</fullName>
    <description>Program Fee Amount</description>
    <formula>Estimated_Total_Debt__c *
(
    VALUE(
        SUBSTITUTE(
            BLANKVALUE(TEXT(Program_Fee__c), &quot;0%&quot;),
            &quot;%&quot;,
            &quot;&quot;
        )
    ) / 100
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Our Non-Refundable Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>