force-app/main/default/objects/Opportunity/fields/Personal_Consumer_Debt2__c.field-meta.xml
<CustomField>
    <fullName>Personal_Consumer_Debt2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consumer Debt</label>
    <type>Checkbox</type>
</CustomField>