force-app/main/default/objects/Opportunity/fields/Personal_Consumer_Debt__c.field-meta.xml
<CustomField>
    <fullName>Personal_Consumer_Debt__c</fullName>
    <label>Type of Debt</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medical Debt</fullName>
            </value>
            <value>
                <fullName>Personal Consumer Debt</fullName>
            </value>
            <value>
                <fullName>Taxes Debt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>