force-app/main/default/objects/Opportunity/fields/Program_Fee__c.field-meta.xml
<CustomField>
    <fullName>Program_Fee__c</fullName>
    <label>Program Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>21%</fullName>
            </value>
            <value>
                <fullName>22%</fullName>
            </value>
            <value>
                <fullName>23%</fullName>
            </value>
            <value>
                <fullName>24%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>26%</fullName>
            </value>
            <value>
                <fullName>27%</fullName>
            </value>
            <value>
                <fullName>28%</fullName>
            </value>
            <value>
                <fullName>29%</fullName>
            </value>
            <value>
                <fullName>30%</fullName>
            </value>
            <value>
                <fullName>31%</fullName>
            </value>
            <value>
                <fullName>32%</fullName>
            </value>
            <value>
                <fullName>33%</fullName>
            </value>
            <value>
                <fullName>34%</fullName>
            </value>
            <value>
                <fullName>35%</fullName>
                <default>true</default>
                <label>35%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>