force-app/main/default/objects/Opportunity/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DCG DEBT</fullName>
            </value>
            <value>
                <fullName>DCG MOD</fullName>
            </value>
            <value>
                <fullName>DCG MOD CA</fullName>
                <label>DCG CA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>