force-app/main/default/objects/Opportunity/fields/Quick_Notes__c.field-meta.xml
<CustomField>
    <fullName>Quick_Notes__c</fullName>
    <label>Quick Notes</label>
    <type>TextArea</type>
</CustomField>