force-app/main/default/objects/Opportunity/fields/Quiz_Quote__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Quote__c</fullName>
    <label>Quiz Quote</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>