force-app/main/default/objects/Opportunity/fields/Retainer_Fee__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Fee__c</fullName>
    <formula>Estimated_Total_Debt__c *
(
VALUE(
SUBSTITUTE(
BLANKVALUE(TEXT(Retainer_Fee_Percent__c), &quot;0%&quot;),
&quot;%&quot;,
&quot;&quot;
)
) / 100
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retainer Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>