force-app/main/default/objects/Opportunity/fields/Retainer_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Fee_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Retainer Fee Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>