force-app/main/default/objects/Opportunity/fields/Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Retention_Days__c</fullName>
    <formula>IF(
  OR(
    ISPICKVAL(StageName, &quot;Contract Signed&quot;),
    ISPICKVAL(StageName, &quot;Enrolled&quot;),
    ISPICKVAL(StageName, &quot;NSF&quot;),ISPICKVAL(StageName, &quot;Fees Done&quot;),
    ISPICKVAL(StageName, &quot;Cancelled&quot;)
  ),
  IF(
    ISBLANK(Cancellation_Date__c),
    FLOOR( (TODAY() - CloseDate) / 7 ),
    FLOOR( (Cancellation_Date__c - CloseDate) / 7 )
  ),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retention Weeks</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>