force-app/main/default/objects/Opportunity/fields/Return_Code__c.field-meta.xml
<CustomField>
    <fullName>Return_Code__c</fullName>
    <label>Return Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R01</fullName>
            </value>
            <value>
                <fullName>R02</fullName>
            </value>
            <value>
                <fullName>R03</fullName>
            </value>
            <value>
                <fullName>R04</fullName>
            </value>
            <value>
                <fullName>R05</fullName>
            </value>
            <value>
                <fullName>R08</fullName>
            </value>
            <value>
                <fullName>R09</fullName>
            </value>
            <value>
                <fullName>R10</fullName>
            </value>
            <value>
                <fullName>R11</fullName>
            </value>
            <value>
                <fullName>R16</fullName>
            </value>
            <value>
                <fullName>R20</fullName>
            </value>
            <value>
                <fullName>R29</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>