force-app/main/default/objects/Opportunity/fields/Scheduled_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Payment_Date__c</fullName>
    <label>Scheduled Payment Date</label>
    <type>Date</type>
</CustomField>