force-app/main/default/objects/Opportunity/fields/Secondary_Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sales_Office__c</fullName>
    <label>Secondary Sales Office</label>
    <length>100</length>
    <type>Text</type>
</CustomField>