force-app/main/default/objects/Opportunity/fields/Send_SMS_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Send_SMS_Enrolled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send SMS Enrolled?</label>
    <type>Checkbox</type>
</CustomField>