force-app/main/default/objects/Opportunity/fields/Send_Suspension_Notice__c.field-meta.xml
<CustomField>
    <fullName>Send_Suspension_Notice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Suspension Notice</label>
    <type>Checkbox</type>
</CustomField>