force-app/main/default/objects/Opportunity/fields/Seq_Week__c.field-meta.xml
<CustomField>
    <fullName>Seq_Week__c</fullName>
    <formula>IF(
  NOT(ISBLANK(CloseDate)),
  FLOOR((CloseDate - DATE(1900, 1, 7)) / 7),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seq Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>