force-app/main/default/objects/Opportunity/fields/SMS_Sent_Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>SMS_Sent_Contract_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Sent Contract Signed</label>
    <type>Checkbox</type>
</CustomField>