force-app/main/default/objects/Opportunity/fields/Total_Amount_with_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_with_Fees__c</fullName>
    <description>Estimated Settlement to Creditors + Our Non Refundable Fee + Setup Fee</description>
    <formula>BLANKVALUE(Estimated_Settlement_to_Creditors__c, 0) +
BLANKVALUE(Our_Non_Refundable_Fee__c, 0) +
BLANKVALUE(Setup_Fee__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount with Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>