force-app/main/default/objects/Opportunity/fields/Total_Banking_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Banking_Fee__c</fullName>
    <formula>BLANKVALUE(Banking_Fee__c, 0) * 
BLANKVALUE(Number_of_Weeks__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Banking Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>