force-app/main/default/objects/Opportunity/fields/Total_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Fees__c</fullName>
    <formula>TEXT(
    VALUE(
        SUBSTITUTE(BLANKVALUE(TEXT(Est_Settlement__c), &quot;0%&quot;), &quot;%&quot;, &quot;&quot;)
    ) +
    VALUE(
        SUBSTITUTE(BLANKVALUE(TEXT(Program_Fee__c), &quot;0%&quot;), &quot;%&quot;, &quot;&quot;)
    )
) &amp; &quot;%&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fees</label>
    <type>Text</type>
</CustomField>