force-app/main/default/objects/Opportunity/fields/Total_Program__c.field-meta.xml
<CustomField>
    <fullName>Total_Program__c</fullName>
    <formula>BLANKVALUE(Estimated_Settlement_to_Creditors__c, 0) +
BLANKVALUE(Our_Non_Refundable_Fee__c, 0) +
BLANKVALUE(Setup_Fee__c, 0) +
BLANKVALUE(Total_Banking_Fee__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Program</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>