force-app/main/default/objects/Opportunity/fields/Transfer_Quality_Status__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Quality_Status__c</fullName>
    <label>Transfer Quality Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>