force-app/main/default/objects/Opportunity/fields/Underwriter__c.field-meta.xml
<CustomField>
    <fullName>Underwriter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Underwriter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>