force-app/main/default/objects/Opportunity/fields/utm_medium__c.field-meta.xml
<CustomField>
    <fullName>utm_medium__c</fullName>
    <label>utm medium</label>
    <length>200</length>
    <type>Text</type>
</CustomField>