force-app/main/default/objects/Opportunity/fields/utm_source__c.field-meta.xml
<CustomField>
    <fullName>utm_source__c</fullName>
    <label>utm source</label>
    <length>200</length>
    <type>Text</type>
</CustomField>