force-app/main/default/objects/Opportunity/fields/VOsoAI__c.field-meta.xml
<CustomField>
    <fullName>VOsoAI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VOsoAI?</label>
    <type>Checkbox</type>
</CustomField>